Bug 412743 nsScriptSecurityManager::Init shouldn't treat failure of InitPrefs as fatal r=mrbkap sr=dveditz